<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/categorie_de_r_clamation"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/radioGroup1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView1">

            <RadioButton
                android:id="@+id/radioButton1.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:text="@string/electrique"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/pane"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton1.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/eau"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton1.4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/incendie"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton1.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/sonorisation"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton1.6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/autre"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/type_de_r_clamation"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/radioGroup2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup1" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2">

            <RadioButton
                android:id="@+id/radioButton2.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:text="@string/non_urgente"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton2.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/urgente"
                android:textColor="@color/colorText"
                android:textSize="16sp" />
        </RadioGroup>

        <Button
            android:id="@+id/button1"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/prendre_une_photo"
            android:textColor="@color/colorButton"
            app:layout_constraintBottom_toTopOf="@id/editTextLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayout"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintBottom_toTopOf="@id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButton"
                android:hint="@string/d_tails"
                android:inputType="textMultiLine"
                android:textColor="@color/colorText" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="48dp"
            android:text="@string/evoyer_la_r_clamation"
            android:textColor="@color/colorButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>