<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="181dp"
        android:text="@string/date"
        android:textColor="@color/colorText"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="281dp"
        android:text="@string/categorie"
        android:textColor="@color/colorText"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="145dp"
        android:text="@string/type"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="282dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/etat"
        android:textAlignment="textEnd"
        android:textColor="@color/colorText"
        android:textSize="13sp" />

</RelativeLayout>