<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="304dp"
            android:layout_height="32dp"
            android:layout_marginTop="48dp"
            android:text="@string/date"
            android:textColor="@color/colorText"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/textView3"
            app:layout_constraintStart_toStartOf="@id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:text="@string/categorie"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@id/textView5"
            app:layout_constraintEnd_toStartOf="@id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:text="@string/type"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/textView5"
            app:layout_constraintEnd_toStartOf="@id/textView4"
            app:layout_constraintStart_toEndOf="@id/textView2"
            app:layout_constraintTop_toBottomOf="@id/textView1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:text="@string/etat"
            android:textAlignment="textEnd"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:layout_marginBottom="32dp"

            app:layout_constraintBottom_toTopOf="@id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView3"
            app:layout_constraintTop_toBottomOf="@id/textView1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="@id/textView4"
            app:layout_constraintStart_toStartOf="@id/textView2"
            app:layout_constraintTop_toBottomOf="@id/textView3"/>



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="376dp"
            android:layout_height="376dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

        <Button
            android:id="@+id/button"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="48dp"
            android:background="@color/colorText"
            android:text="@string/s_assigner_une_r_clamation"
            android:textColor="@color/colorButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>