<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayout1"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@id/editTextLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText1"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:background="@color/colorButton"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayout2"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextLayout1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText2"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:background="@color/colorButton"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextLayout2" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="120dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>